# shared-libraries

./: Cargo.toml  README.md
crates/s3-manager/: Cargo.toml
crates/s3-manager/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/s3-manager/src/operations/: download.rs  list_objects.rs  mod.rs  upload.rs
crates/smtp-manager/: Cargo.toml
