[package]
name = "s3-manager"
version = "0.1.0"
edition = "2024"
description = "S3 Manager for handling S3 operations in Plannify applications"
authors = ["Baptiste Bronsin <baptiste.bronsin@outlook.com>"]
license = "Apache-2.0"

[dependencies]
aws-sdk-s3 = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
aws-config = "1.8.11"
